# claude-code-architect

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  mindmap.md  pyproject.toml  session-notes.md
.github/: CODEOWNERS
lessons/: 00-setup.md  01-api-mental-model.md  02-tool-use-basics.md  03-agentic-loop.md  04-workflow-patterns.md  05-loop-antipatterns.md  06-customer-lookup-agent.md  07-structured-errors.md  08-tool-choice.md  09-mcp-mental-model.md  10-fastmcp-server.md  11-tool-descriptions.md  12-mcp-json-config.md  13-sdk-vs-raw-api.md  14-agent-definition.md  15-subagent-spawning.md  16-coordinator-pattern.md  17-parallel-subagents.md  18-hooks.md  README.md
lessons/scripts/: agentic_loop.py  customer_agent.py  hello.py  inspect_blocks.py  multi_turn.py  stop_reasons.py  structured_errors.py  support_client.py  support_server.py  tool_choice.py  tool_use.py
