[project]
name = "claude-code-architect"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "claude-agent-sdk>=0.2.109",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"
